fix: make menu works on mobile (enters on left)

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -15,7 +15,7 @@
 @import 'footer';
 
 body {
-  overflow-x: hidden; // Prevent headaches
+  //overflow-x: hidden; // Prevent headaches
 }
 
 a,
